Small formatting improvements