@@ -17,15 +17,15 @@ public class Part_1 {
         Matcher matcher;
 
 //        Converts directions to an array with ints for indexes 0 = left, 1 = right.
-        int[] directions = new int[inputLines.get(0).length()];
-        int iteraton = 0;
-        for (Character c : inputLines.get(0).toCharArray()){
+        int[] directions = new int[inputLines.getFirst().length()];
+        int iteration = 0;
+        for (Character c : inputLines.getFirst().toCharArray()){
             if (c.equals('L')){
-                directions[iteraton] = 0;
+                directions[iteration] = 0;
             } else if (c.equals('R')){
-                directions[iteraton] = 1;
+                directions[iteration] = 1;
             }
-            iteraton++;
+            iteration++;
         }
 
 //        Converts input array to hashmap, first set of letters as keys and the two others in array as value.
@@ -45,19 +45,18 @@ public class Part_1 {
 //        Finds the number of steps between AAA and ZZZ via two loops
         String nextKey = "AAA";
         boolean end = false;
-        int numberOfSteps = 0;
+        int stepsCount = 0;
         while (!end){
 
 //            Direction/step loop
             for (int direction : directions) {
-                String[] destionations = map.get(nextKey);
-                nextKey = destionations[direction];
-            numberOfSteps++;
+                String[] destinations = map.get(nextKey);
+                nextKey = destinations[direction];
+            stepsCount++;
             }
             if (nextKey.equals("ZZZ")) end = true;
         }
 
-//        Prints put number of steps
-        System.out.println(numberOfSteps);
+        System.out.println("Day 8, Part 1, Number of steps required to reach ZZZ: " + stepsCount);
     }
 }
